# yew-playground

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs
flake-parts/: cargo.nix
public/: index.html
